Fixed Fevicon Again

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="css/styles.css">
 
   <!-- Fevicon -->
-  <link rel="fevicon" href="/favicon.ico">
+  <link rel="icon" href="images/fevicon.png">
 </head>
 
 <body>
